--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <h1>Welcome back!</h1>
         <h2 id="date"></h2>
         
-        <form action="https://duckduckgo.com/" method="get">
-            <input type="text" class="input" placeholder="Search with DuckDuckGo" name="q" autofocus/>
+        <form action="https://startpage.com/" method="get">
+            <input type="text" class="input" placeholder="Search with Startpage" name="q" autofocus/>
         </form>
 
         <ul>
             <li>~/general </li>
-            <li><a href="https://gmail.com/">Gmail</a></li>
+            <li><a href="https://mail.proton.me/u/1/inbox">Mail</a></li>
             <li><a href="https://calendar.google.com/calendar/u/0/r?pli=1">Calendar</a></li>
             <li><a href="https://www.office.com/?auth=1">Office</a></li>
             <li><a href="https://onedrive.live.com/">One Drive</a></li>
