--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Welcome back!</h1>
         <h2 id="date"></h2>
         
-        <form action="https://startpage.com/" method="get">
-            <input type="text" class="input" placeholder="Search with Startpage" name="q" autofocus/>
+        <form action="https://www.startpage.com/sp/search" method="get">
+            <input type="text" class="input" placeholder="Search with Startpage" name="query" autofocus/>
         </form>
 
         <ul>
